# Inverse-Material-Synthesis-via-Sub-Shader-Extraction

./: .gitignore  Dockerfile  Feature_extraction_2_0.ipynb  TrainingOnlyVer2.ipynb  center_multiplexing_params.py  dockerfile  dropbox_download.py  extract_gram_features.py  feature_extraction_2_0.py  loadvgg.py  normalise_grams.py  pyproject.toml  render_missing_frames.py  requirements.txt  training.py  trainingonlyver2.py
dataset_rendering/: BiggerShaderDatasetjune24.blend  RunEveryFrame.py  render_missing_frames.py  shader_trimming.py
lightning_reimplementation/: configs.yaml  data_loading.py  lightning_training.py  util.py
old_pytorch_implementation/: training.py
src/: data_loading.py  lightning_training.py
