[project]
name = "bach-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openexr>=3.3.2",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
    "yapf>=0.43.0",
]


[tool.isort]
#profile = "hug"
profile = "google"
line_length = 120
force_single_line = "True"
force_sort_within_sections = "True"
lexicographical = "True"
single_line_exclusions = ['typing',]

[tool.yapf]
based_on_style = "pep8"
COLUMN_LIMIT = 120
